[package]
name = "p-memo"
version = "0.0.0"
description = "A pinocchio-based Memo (aka 'p-memo') program"
repository = "https://github.com/febo/p-memo"
license = "Apache-2.0"
edition = "2021"
readme = "./README.md"

[lib]
crate-type = ["cdylib"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']

[features]
xs = []
xl = ["dep:five8", "dep:pinocchio-log"]

[dependencies]
five8 = { version = "0.2.1", optional = true }
pinocchio = { version = "0.8", git = "https://github.com/anza-xyz/pinocchio.git", branch = "febo/invoke-improvements" }
pinocchio-log = { version = "0.4", optional = true, git = "https://github.com/anza-xyz/pinocchio.git", branch = "febo/invoke-improvements" }

[dev-dependencies]
mollusk-svm = "0.1"
solana-account = "2.2.1"
solana-instruction = "2.2.1"
solana-pubkey = "2.2.1"
